--- a/css/master.css
+++ b/css/master.css
@@ -114,8 +114,8 @@
 
 .quip-1{background-image: url(../media/user-icon1.png); background-position: center 30px;}
 .quip-2{background-image: url(../media/user-icon2.png); background-position: 20px 25px;}
-.quip-3{}
-.quip-4{}
+.quip-3{background-image: url(../media/user-icon3.png); background-position: center 30px;}
+.quip-4{background-image: url(../media/user-icon4.png); background-position: 25px 25px;}
 
 @media screen and (max-width:912px) { 
 	#quote-box{font-size: 36px; padding: 45px 50px 0 50px;}
@@ -162,7 +162,11 @@
 	padding: 15px;
 }
 
-#contact-form input[type=text]:focus{outline: none;}
+#contact-form input[type=text]:focus{
+	border:1px solid #0700ff;
+	outline: none;
+	background-color:#FFFFFF;
+}
 
 #contact-form textarea{
 	width: 100%;
@@ -173,7 +177,12 @@
 	padding: 15px;
 	font-size: 18px;
 }
-#contact-form textarea:focus{outline: none;}
+#contact-form textarea:focus{
+	order:1px solid #0700ff;
+	outline: none;
+	background-color:#FFFFFF;
+
+}
 
 #contact-form input[type=submit]{
 	width: 200px;
@@ -183,6 +192,11 @@
 	border:1px solid #0700ff;
 	font-size: 18px;
 	color: #0700ff;
+}
+
+#contact-form input[type=submit]:hover{
+	background-color:#0700ff;
+	color:#FFFFFF;
 }
 
 #resume-column{
@@ -203,7 +217,6 @@
 	top: -20px;
 	font-size: 80px;
 	color: #0700ff;
-	border-bottom: 1px solid #0700ff;
 }
 
 @media screen and (max-width:912px) { 
