--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,13 @@
 	box-sizing: border-box;
 }
 
+a.carousel-control
+{
+	font-size: 36pt;
+	font-color: grey;
+
+}
+
 /*  NAVIGATION STYLING */
 #nav-container{
 	width: 100%;
@@ -102,9 +109,9 @@
 	width: 150px;
 	height: 150px;
 	border:5px solid #0700ff;
-	border-radius: 75px;
-	-webkit-border-radius: 75px;
-	-moz-border-radius: 75px;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
 	margin: 0 auto;
 		background: #0700ff;
 		background-size: 65%;
@@ -139,8 +146,15 @@
 	color: #7c7c7c;
 }
 
+#contact-form-container
+{
+	margin: 0 auto;
+	max-width: 75%;
+}
+
 #contact-form{
-	width: 50%;
+	text-align: center;
+	width: 100%;
 	height: 768px;
 	float: left;
 	margin: 0;
@@ -170,7 +184,6 @@
 
 #contact-form textarea{
 	width: 100%;
-	max-width: 100%;
 	height: 200px;
 	border:none;
 	background: #ddd;
@@ -200,21 +213,16 @@
 }
 
 #resume-column{
-	width: 50%;
+	text-align: center;
 	float: left;
-	padding: 50px 50px 50px 100px;
 }
 
-#resume-column p{
+#resume-column div{
 	font-size: 42px;
 	color: #aaa;
-	position: relative;
-	top: 243px;
 }
 
 #resume-column a{
-	position: relative;
-	top: -20px;
 	font-size: 80px;
 	color: #0700ff;
 }
