--- a/css/master.css
+++ b/css/master.css
@@ -8,7 +8,7 @@ a.carousel-control
 {
 	font-size: 36pt;
 	font-color: grey;
-
+	padding: 50% 0 0 0;
 }
 
 /*  NAVIGATION STYLING */
@@ -22,9 +22,13 @@ a.carousel-control
 }
 
 #logo{
-	width: 15%;
+	width: 300px;
 	height: 50px;
-	background: grey;
+	color: white;
+	font-size: 22px;
+	font-weight: bold;
+	padding-left: 25px;
+	padding-top: 7px;
 	float: left;
 	position: absolute;
 }
