Added JSON form, semi-functional scroll locking
A form to create an action to append the JSON is in place, but is not
functioning. Responsive circles won’t work in this implementation,
using a third party vendor isn’t something I would like to do. Working
on the locking scroll now.

--- a/css/master.css
+++ b/css/master.css
@@ -81,12 +81,14 @@ a.carousel-control
 }
 
 #graphic-container{
-	height: 500px;
+	max-height: 500px;
 }
 
 #user-photo{
 	width: 400px;
 	height: 400px;
+	max-width: 400px;
+	max-height: 400px;
 	background: url(../media/portrait.jpg);
 	background-size: 100%;
 	background-position: center -75px;
@@ -96,7 +98,6 @@ a.carousel-control
 	-webkit-border-radius: 200px;
 	-moz-border-radius: 200px;
 	position: relative;
-	z-index: 5;
 }
 
 .quip-container{
@@ -159,7 +160,7 @@ a.carousel-control
 #contact-form{
 	text-align: center;
 	width: 100%;
-	height: 768px;
+	height: auto;
 	float: left;
 	margin: 0;
 	padding: 25px 25px 50px 50px;
@@ -193,6 +194,7 @@ a.carousel-control
 	background: #ddd;
 	padding: 15px;
 	font-size: 18px;
+	resize: none;
 }
 #contact-form textarea:focus{
 	order:1px solid #0700ff;
@@ -218,7 +220,6 @@ a.carousel-control
 
 #resume-column{
 	text-align: center;
-	float: left;
 }
 
 #resume-column div{
@@ -229,6 +230,65 @@ a.carousel-control
 #resume-column a{
 	font-size: 80px;
 	color: #0700ff;
+}
+
+#appendProject
+{
+	text-align: center;
+	padding: 25px 25px 50px 50px;
+	margin: 0;
+}
+
+#appendProject label
+{
+	display: block;
+	font-weight: 300;
+	margin: 15px 0 2px 0;
+}
+
+#appendProject input[type=text]
+{
+	width: 100%;
+	border:none;
+	background: #ddd;
+	height: 50px;
+	font-size: 18px;
+	padding: 15px;
+}
+
+#appendProject input[type=submit]
+{
+	width: 200px;
+	height: 45px;
+	margin: 10px 0 0 0;
+	background: #fff;
+	border:1px solid #0700ff;
+	font-size: 18px;
+	color: #0700ff;
+}
+
+#appendProject input[type=submit]:hover
+{
+	background-color:#0700ff;
+	color:#FFFFFF;
+}
+
+#appendProject textarea
+{
+	width: 100%;
+	height: 200px;
+	border:none;
+	background: #ddd;
+	padding: 15px;
+	font-size: 18px;
+	resize: none;
+}
+
+#appendProject textarea:focus
+{
+	order:1px solid #0700ff;
+	outline: none;
+	background-color:#FFFFFF;
 }
 
 @media screen and (max-width:912px) { 
