Got scroll locking working
It works!!!! Finally. lol. Now onto the JSON file.

--- a/css/master.css
+++ b/css/master.css
@@ -11,6 +11,11 @@ a.carousel-control
 	padding: 50% 0 0 0;
 }
 
+#wrapper
+{
+	overflow: hidden;
+}
+
 /*  NAVIGATION STYLING */
 #nav-container{
 	width: 100%;
